<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondopopup"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            style="@style/texts"
            android:textSize="35sp"
            android:text="@string/tiempo"
            android:layout_marginTop="40dp"
            android:textColor="#521704"
            android:layout_gravity="center"/>
        <TextView
            style="@style/texts"
            android:textSize="25sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/nologro"
            android:textColor="#521704"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/inten"
            style="@style/texts"
            android:textSize="25sp"
            android:text="@string/inte"
            android:visibility="visible"
            android:textColor="#521704"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/iniciopop"
            android:textColor="#521704"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="30sp"
            android:layout_marginTop="25dp"
            style="@style/texts"
            android:text="@string/inicio"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/reiniciarpop"
            android:textColor="#521704"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="30sp"
            style="@style/texts"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="15dp"

            android:text="@string/jugarvolver"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>